# Racernix

./: .gitignore  django_design.md  manage.py  pyproject.toml  steps.md
racernix/: asgi.py  urls.py  wsgi.py
racernix/settings/: base.py
